optimazation of WtAiTranslateDoc

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -35,6 +35,7 @@ guiHelpButton = Hilfe
 guiCheckComplete = LanguageTool-Pr\u00fcfung beendet.
 guiConfigWindowTitle = LanguageTool-Optionen
 guiMenuAbout = \u00dcber\u2026
+guiOOSaveDocument = Dokument speichern
 guiOOoChangeButton = Korrigieren
 guiOOoChangeAllButton = Alle korrigieren
 guiOOoAutoCorrectButton = Zur Autokorrektur hinzuf\u00fcgen
@@ -173,7 +174,8 @@ loAiTranslationDialogTitle = KI \u00dcbersetzung
 loAiDialogLanguageLabel = \u00dcbersetzen in
 loAiDialogTranslateButton = \u00dcbersetzen
 loAiDialogTranslateFreedom = Freiheit der \u00dcbersetzung
-loAiDialogTranslateFileError = Das Dokument bitte vor der \u00dcbersetzung speichern
+loAiDialogTranslateFileError = Das Dokument muss vor der \u00dcbersetzung gespeichert werden.\nBitte speichern Sie es zuerst.
+loAiDialogSaveFileMessage = Das Dokument muss vor der \u00dcbersetzung gespeichert werden.\nMöchten Sie es jetzt speichern?
 guiUColorStyleLabel = Farbe und Stil f\u00fcr Unterstreichungen:
 guiUColorChange = \u00c4ndern\u2026
 guiUColorDefault = Standard
