--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -35,6 +35,7 @@ guiHelpButton = Help
 guiCheckComplete = LanguageTool check is complete.
 guiConfigWindowTitle = LanguageTool Options
 guiMenuAbout = &About\u2026
+guiOOSaveDocument = Save document
 guiOOoChangeButton = Correct
 guiOOoChangeAllButton = Correct All
 guiOOoAutoCorrectButton = Add to AutoCorrect
@@ -170,7 +171,8 @@ loAiTranslationDialogTitle = AI Translation
 loAiDialogLanguageLabel = Translate into
 loAiDialogTranslateButton = Translate
 loAiDialogTranslateFreedom = Freedom of translation
-loAiDialogTranslateFileError = Please save the document before translating
+loAiDialogTranslateFileError = The document must be saved before translation.\nPlease save it first.
+loAiDialogSaveFileMessage = The document must be saved before translation.\nDo you want to save it now?
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Change
 guiUColorDefault = Default
