--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -35,6 +35,7 @@ guiHelpButton = Súgó
 guiCheckComplete = A Nyelveszköz ellenőrzése befejeződött.
 guiConfigWindowTitle = A Nyelveszköz beállításai
 guiMenuAbout = &Névjegy\u2026
+guiOOSaveDocument = Save document
 guiOOoChangeButton = Kijavítás
 guiOOoChangeAllButton = Minden kijavítása
 guiOOoAutoCorrectButton = Hozzáadás az Automatikus javításhoz
@@ -170,7 +171,8 @@ loAiTranslationDialogTitle = AI-fordítás
 loAiDialogLanguageLabel = Fordítás nyelvre:
 loAiDialogTranslateButton = Fordítás
 loAiDialogTranslateFreedom = A fordítás szabadsága
-loAiDialogTranslateFileError = Please save the document before translating
+loAiDialogTranslateFileError = The document must be saved before translation.\nPlease save it first.
+loAiDialogSaveFileMessage = The document must be saved before translation.\nDo you want to save it now?
 guiUColorStyleLabel = Aláhúzott stílus és szín:
 guiUColorChange = Változás
 guiUColorDefault = Alapértelmezett
