ai images: user defined size added

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -160,6 +160,8 @@ loAiDialogAddSummaryButton = Zusammenfassung hinzuf\u00fcgen
 loAiDialogImgExcludeLabel = Ausschlie\u00dfen
 loAiDialogImgImageLabel = Bild
 loAiDialogImgStepLabel = Schritt
+loAiDialogImgWidthLabel = Breite
+loAiDialogImgHeightLabel = Höhe
 loAiDialogImgChangeImageButton = Bild \u00e4ndern
 loAiDialogImgNewImageButton = Neues Bild
 loAiDialogImgRemoveButton = L\u00f6schen
