--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -157,6 +157,8 @@ loAiDialogAddSummaryButton = Add Summary
 loAiDialogImgExcludeLabel = Exclude
 loAiDialogImgImageLabel = Image
 loAiDialogImgStepLabel = Step
+loAiDialogImgWidthLabel = Width
+loAiDialogImgHeightLabel = Height
 loAiDialogImgChangeImageButton = Change Image
 loAiDialogImgNewImageButton = New Image
 loAiDialogImgRemoveButton = Remove
