--- a/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
+++ b/src/main/resources/org/writingtool/hu/MessagesBundle_hu.properties
@@ -157,6 +157,8 @@ loAiDialogAddSummaryButton = Add Summary
 loAiDialogImgExcludeLabel = Kizárás
 loAiDialogImgImageLabel = Kép
 loAiDialogImgStepLabel = Lépés
+loAiDialogImgWidthLabel = Width
+loAiDialogImgHeightLabel = Height
 loAiDialogImgChangeImageButton = Kép módosítása
 loAiDialogImgNewImageButton = Új kép
 loAiDialogImgRemoveButton = Eltávolítás
