--- a/src/main/resources/org/writingtool/de/URLsBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/URLsBundle_de.properties
@@ -1,4 +1,4 @@
-# English URLs (Help, Options) of WritingTool
+# German URLs (Help, Options) of WritingTool
 # Copyright (C) 2024 Fred Kruse (https://fk-es.de)
 OptionProfiles = de/hilfe/optionen/profile
 OptionGeneral = de/hilfe/optionen/allgemein
