--- a/src/main/resources/org/writingtool/ca/URLsBundle_ca.properties
+++ b/src/main/resources/org/writingtool/ca/URLsBundle_ca.properties
@@ -1,15 +1,15 @@
-# Catalan URLs (Help, Options) of WritingTool
-# Copyright (C) 2025 Joan Montané
-OptionProfiles = ca/ajuda/opcions/perfils
-OptionGeneral = ca/ajuda/opcions/general
-OptionGrammarAndStyle = ca/ajuda/opcions/regles-gramaticals-i-estil
-OptionDefaultColors = ca/ajuda/opcions/colors-per-defecte
-OptionTechnicalSettings = ca/ajuda/opcions/parametres-tecnics
-OptionAiSupport = ca/ajuda/opcions/configuracio-suport-ia
+# English URLs (Help, Options) of WritingTool
+# Copyright (C) 2024 Fred Kruse (https://fk-es.de)
+OptionProfiles = en/help/options/profiles
+OptionGeneral = en/help/options/general
+OptionGrammarAndStyle = en/help/options/grammar-and-style-rules
+OptionDefaultColors = en/help/options/default-colors
+OptionTechnicalSettings = en/help/options/technical-settings
+OptionAiSupport = en/help/options/ai-support-settings
 
-localAiInstallation = ca/ajuda/installacio-ia-local
+localAiInstallation = en/help/installation-of-a-local-ai
 
-StatisticalAnalysis = ca/ajuda/analisi-estadistica
+StatisticalAnalysis = en/help/statistical-analysis
 
-AiDialogText = ca/ajuda/dialeg-ia/dialeg-ia-text
-AiDialogImage = ca/ajuda/dialeg-ia/dialeg-ia-imatge
+AiDialogText = en/help/ai-dialog/ai-dialog-text
+AiDialogImage = en/help/ai-dialog/ai-dialog-image
