--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -283,7 +283,7 @@ loLabelCheckProgress = Gepr\u00fcfter Text:
 loBusyMessage = LibreOffice ist besch\u00e4ftigt. \nBitte versuchen Sie es sp\u00e4ter.
 loWaitMessage = Initialisierung des Dialogs. \nBitte warten\u2026
 loExtHeapMessage = Speicherlimit f\u00fcr LanguageTool erreicht. Es wird in den Absatzmodus gewechselt, sodass einige Regeln, die Fehler \u00fcber Absatzgrenzen finden, nicht funktionieren werden.
-loExtSwitchOffMessage = LanguageTool ist ausgeschaltet. Schalten Sie es an, um diese Funktion zu nutzen.
+loExtSwitchOffMessage = Hintergrundprüfungen sind deaktiviert. Aktivieren Sie sie, um diese Funktion zu nutzen.
 loDialogUnsupported = Die Grammatikpr\u00fcfung unterst\u00fctzt keine enthaltenen Objekte wie Grafiken, Bilder oder Textobjekte.\nBitte setzen Sie den Cursor in den Text und starten Sie den Dialog erneut.
 loNextErrorUnsupported = Die Grammatikpr\u00fcfung unterst\u00fctzt keine enthaltenen Objekte wie Grafiken, Bilder oder Textobjekte.\nBitte setzen Sie den Cursor in den Text und suchen Sie erneut nach dem n\u00e4chsten Fehler.
 loNoGrammarCheckWarning = Es scheint, dass die automatische Grammatikpr\u00fcfung deaktiviert ist. Bitte aktivieren Sie \u201eGrammatik w\u00e4hrend der Eingabe pr\u00fcfen\u201c unter \u201eExtras / Optionen / Spracheinstellungen / Linguistik\u201c und starten Sie LibreOffice/OpenOffice neu.
