--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -278,7 +278,7 @@ loLabelCheckProgress = Checked text:
 loBusyMessage = LibreOffice is busy.\nPlease try later.
 loWaitMessage = Initializing dialog.\nPlease wait\u2026
 loExtHeapMessage = LanguageTool memory limit reached. Switching to one paragraph mode. Some text-level rules will not work properly.
-loExtSwitchOffMessage = LanguageTool is switched off. Please switch it on to run this function.
+loExtSwitchOffMessage = Background checks are disabled. Enable them to use this feature.
 loDialogUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects.\nPlease place the cursor into the text and start the dialog again.
 loNextErrorUnsupported = Grammar check doesn't support included Objects like graphics, pictures or text objects.\nPlease place the cursor into the text and search for next Error again.
 loNoGrammarCheckWarning = It seems the automatic grammar check is disabled. Please enable \u201cCheck grammar as you type\u201d at \u201cTools / Options / Language Settings / Writing Aids\u201d and restart LibreOffice/OpenOffice.
