dialog to change quotes added

--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -178,6 +178,11 @@ loAiDialogTranslateButton = \u00dcbersetzen
 loAiDialogTranslateFreedom = Freiheit der \u00dcbersetzung
 loAiDialogTranslateFileError = Das Dokument muss vor der \u00dcbersetzung gespeichert werden.\nBitte speichern Sie es zuerst.
 loAiDialogSaveFileMessage = Das Dokument muss vor der \u00dcbersetzung gespeichert werden.\nMöchten Sie es jetzt speichern?
+loQuotesDialogTitle = Anführungszeichen ändern
+loQuotesDialogChangeButton = Ändere
+loQuotesDialogChangeToLabel = Ändere Anführungszeichen zu
+loQuotesNumberChangesLabel = Änderungen
+loQuotesNumberWrongLabel = falsche Anführungszeichen gefunden
 guiUColorStyleLabel = Farbe und Stil f\u00fcr Unterstreichungen:
 guiUColorChange = \u00c4ndern\u2026
 guiUColorDefault = Standard
@@ -235,6 +240,7 @@ loMenuRemoteInfo = Hinweis zu externer Pr\u00fcfung
 loMenuPermanentIgnoreParagraph = Absatz dauerhaft ignorieren
 loMenuPermanentIgnoreRange = Ausgew\u00e4hlten Bereich dauerhaft ignorieren
 loMenuResetIgnorePermanent = Dauerhaft ignorieren zur\u00fccksetzen
+loMenuChangeQuotes = Anführungszeichen ändern
 loMenuEnableBackgroundCheck = Hintergrundpr\u00fcfung einschalten
 loMenuDisableBackgroundCheck = Hintergrundpr\u00fcfung ausschalten
 loMenuGrammarCheckAgain = Dokument erneut pr\u00fcfen
