--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -175,6 +175,11 @@ loAiDialogTranslateButton = Translate
 loAiDialogTranslateFreedom = Freedom of translation
 loAiDialogTranslateFileError = The document must be saved before translation.\nPlease save it first.
 loAiDialogSaveFileMessage = The document must be saved before translation.\nDo you want to save it now?
+loQuotesDialogTitle = Change Quotes
+loQuotesDialogChangeButton = Change Quotes
+loQuotesDialogChangeToLabel = Change quotes to
+loQuotesNumberChangesLabel = changes
+loQuotesNumberWrongLabel = wrong quotes detected
 guiUColorStyleLabel = Underline style and color:
 guiUColorChange = Change
 guiUColorDefault = Default
@@ -231,6 +236,7 @@ loRemoteInfoOtherServer = The extension will check your text by sending it to th
 loMenuRemoteInfo = Remote Check Hint
 loMenuPermanentIgnoreParagraph = Permanently ignore paragraph
 loMenuPermanentIgnoreRange = Permanently ignore selected range
+loMenuChangeQuotes = Change Quotes
 loMenuResetIgnorePermanent = Reset Ignore Permanent
 loMenuEnableBackgroundCheck = Enable background check
 loMenuDisableBackgroundCheck = Disable background check
