--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -105,6 +105,8 @@ guiDisabledDefaultRules = Deaktivierte Standardregeln
 guiAiText = Text 
 guiAiImages = Bilder
 guiAiTextToSpeech = Text zu Sprache
+guiAiTestButton = KI Verbindungstest
+guiAiTestMessage = Der Zugriff auf den KI-Server war erfolgreich.
 guiNoStyleCheckWithinDirectSpeech = Keine Stilpr\u00fcfung innerhalb w\u00f6rtlicher Rede
 guiNoGrammarCheckWithinDirectSpeech = Auch keine Grammatikpr\u00fcfung innerhalb w\u00f6rtlicher Rede
 loMenuAiSupport = KI Unterst\u00fctzung
