--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -102,6 +102,8 @@ guiAiStylisticErrorColor = AI detected stylistic hints
 guiAiText = Text
 guiAiImages = Images
 guiAiTextToSpeech = Text to speech
+guiAiTestButton = Test AI connection
+guiAiTestMessage = Access to the AI server was successful.
 guiNoStyleCheckWithinDirectSpeech = No style check within direct speech
 guiNoGrammarCheckWithinDirectSpeech = Also no grammar check within direct speech
 loMenuAiSupport = AI Support
