--- a/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
+++ b/src/main/resources/org/writingtool/de/MessagesBundle_de.properties
@@ -317,4 +317,5 @@ loStatisticalAnalysisNotAnalyzed = Nicht analysiert
 loStatisticalAnalysisNumber = Anzahl
 loSidebarParagraphLabel = Aktueller Absatz (Treffer in [])
 loEnableLoDefaultSettingsMessage = Die Einstellungen von LibreOffice und WritingTool stimmten nicht überein.\nDie LibreOffice-Einstellungen wurden auf die Standardeinstellungen von WritingTool geändert.\n\nBitte benutzen Sie künftig die WritingTool-Einstellungen,\nsollten Sie keine Grammatikprüfung im Hintergrund oder keine WritingTool Rechtschreibprüfung wünschen.\n\nLibreOffice muss nun neu gestartet werden.
+loWtIsDisabledMessage = WritingTool ist in den LibreOffice-Einstellungen nicht aktiviert.\n\nBitte aktivieren Sie WritingTool unter: Extras/Optionen/Sprachen und Gebietsschemata/Linguistik\nStellen Sie sicher, dass keine andere Grammatikprüfung installiert ist.\nFalls Sie Hilfe benötigen, suchen Sie die die Seite https:\\writingtool.org auf.\n\nNach den Änderungen in den Einstellungen wird empfohlen, LibreOffice neu zu starten.
 crh = Krimtatar
