--- a/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
+++ b/src/main/resources/org/writingtool/en/MessagesBundle_en.properties
@@ -312,4 +312,5 @@ loStatisticalAnalysisNotAnalyzed = Not analyzed
 loStatisticalAnalysisNumber = Number
 loSidebarParagraphLabel = Current Paragraph (Matches in [])
 loEnableLoDefaultSettingsMessage = The LibreOffice and WritingTool settings did not match.\nThe LibreOffice settings have been set to the WritingTool default settings.\n\nPlease use the WritingTool settings in the future\nif you do not want the background grammar checker or the WritingTool spell checker.\n\nLibreOffice must now be restarted.
+loWtIsDisabledMessage = WritingTool is not enabled in the LibreOffice settings.\n\nPlease enable WritingTool at Tools/Options/Languages and Locales/Writing Aids.\nMake sure that no other grammar checker is installed.\nIf you need help, visit: https://writingtool.org.\n\nAfter making changes to the settings, it is recommended to restart LibreOffice.
 crh = Crimean Tatar
